--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ bitvec = "1"
 rand = { version = "0.8.5", features = [ "small_rng" ] }
 
 [dev-dependencies]
-criterion = { version = "0.4" }
+criterion = { version = "0.5.1", features = ["html_reports"] }
 
 [[bench]]
 name = "select_benchmark"
