--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,6 @@ criterion = { version = "0.5.1", features = ["html_reports"] }
 name = "rank"
 path = "benches/rank/index.rs"
 harness = false
+
+[profile.release]
+debug = true
