--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ name = "main"
 name = "query_reader"
 
 [dependencies]
+memmap2 = "0.9.4"
 log = "0.4.21"
 bitvec = "1"
 rand = { version = "0.8.5", features = [ "small_rng" ] }
@@ -25,6 +26,3 @@ criterion = { version = "0.5.1", features = ["html_reports"] }
 name = "rank"
 path = "benches/rank/index.rs"
 harness = false
-
-[profile.release]
-debug = true
